objects/User.object
<CustomObject>
    <fields>
        <fullName>Acquisition_Adj_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies Acquisition &amp; Adjacency Reps. Used for reporting</description>
        <label>Acquisition/Adj Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acquisition_Sales_Call_Goal__c</fullName>
        <label>Acquisition Sales Call Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActivatedbyBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is activated by batch to overcome the Account Assignment Failures</description>
        <label>ActivatedbyBatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Annuity_Agreement_Events_Target__c</fullName>
        <description>INTEG - N  ||  CODE - N  ||  WF - N  ||  AP - N  ||  VAL - N  ||  CASE# 01127802  ||  4DX Targets for Adjacency Reps to enable reporting calculations</description>
        <inlineHelpText>4DX Targets for Adjacency Reps to enable reporting calculations</inlineHelpText>
        <label>Annuity Agreement Events Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Pro_User__c</fullName>
        <formula>IF(Profile.Name ==&apos;Business Pro Rep&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Pro User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Review_Monthly_Goal__c</fullName>
        <label>Business Review Monthly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBFS_Pipeline_Goal__c</fullName>
        <description>This field is to be used for CBFS Rep. Pipeline Goal.</description>
        <label>CBFS Pipeline Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Assignment__c</fullName>
        <label>Class Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Rate_Goal__c</fullName>
        <label>Compliance Rate Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompuCom_BDR__c</fullName>
        <formula>BEGINS(Profile.Name, &apos;TZ BDR&apos;) || 
BEGINS(Profile.Name, &apos;TZ Reveneer&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CompuCom BDR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Appointment_Events_Target__c</fullName>
        <description>INTEG - N || CODE - N || WF - N || AP - N || VAL - N || CASE# 01127802 || 4DX Targets for Adjacency Reps to enable reporting calculations</description>
        <inlineHelpText>4DX Targets for Adjacency Reps to enable reporting calculations</inlineHelpText>
        <label>Customer Appointment Events Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deactivation_Error__c</fullName>
        <label>Deactivation Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_User__c</fullName>
        <description>Field is used to capture the VP Admin role. This will be used for the DocuSign eSignature. Project-000468</description>
        <inlineHelpText>VP Admin for DocuSign eSignature</inlineHelpText>
        <label>Delegate User</label>
        <relationshipName>Delegate_User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Demo_Appointment_Events_Target__c</fullName>
        <description>INTEG - N || CODE - N || WF - N || AP - N || VAL - N || CASE# 01127802 || 4DX Targets for Adjacency Reps to enable reporting calculations</description>
        <inlineHelpText>4DX Targets for Adjacency Reps to enable reporting calculations</inlineHelpText>
        <label>Demo Appointment Events Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Director_ID__c</fullName>
        <formula>IF(ISPICKVAL(Manager.Job_Code_Level__c, &quot;Director&quot;), ManagerId,
IF(ISPICKVAL(Manager.Manager.Job_Code_Level__c, &quot;Director&quot;), Manager.ManagerId,
IF(ISPICKVAL(Manager.Manager.Manager.Job_Code_Level__c, &quot;Director&quot;), Manager.Manager.ManagerId, 
IF(ISPICKVAL(Manager.Manager.Manager.Manager.Job_Code_Level__c, &quot;Director&quot;), Manager.Manager.Manager.ManagerId,
&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Face_to_Face_Monthly_Goal__c</fullName>
        <label>Face to Face Monthly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; &apos; &apos; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTMarketUserCount__c</fullName>
        <description>To count total active users by market only for Canada. It needs to be manually updated weekly.</description>
        <formula>CASE( Market__c , &apos;Canada&apos;, 12, &apos;Customer Service Centre&apos;, 8,&apos;Executive&apos;, 5,&apos;Reporting&apos;, 4,&apos;Sales - Business Development National&apos;, 33, &apos;Sales - Central&apos;, 30, &apos;Sales - East&apos;, 25, &apos;Sales - Facilities&apos;, 14, &apos;Sales - Health Care (IAM)&apos;, 6, &apos;Sales - Imaging&apos;, 6, &apos;Sales - Inside&apos;, 42, &apos;Sales - Interiors&apos;, 49,&apos;Sales - Large/Enterprise&apos;, 11, &apos;Sales - Public Sector&apos;, 40, &apos;Sales - West&apos;, 30, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTMarketUserCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GT_Employee_ID__c</fullName>
        <description>This is the HR EMP Id from G&amp;T - Canada</description>
        <externalId>true</externalId>
        <label>GT Employee ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_1__c</fullName>
        <description>Goal for Qualify Events for Acq or Adj users or Opportunities for Ret users</description>
        <inlineHelpText>Count of Opps created for Ret users OR count of Qualify Events for Acq or Adj users in the past 30 days</inlineHelpText>
        <label>Goal 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_2__c</fullName>
        <description>Goal for Discovery Events</description>
        <inlineHelpText>Count of Discovery Events in the past 30 days</inlineHelpText>
        <label>Goal 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_3__c</fullName>
        <description>Goal for Proposal Events</description>
        <inlineHelpText>Count of Proposal Events in the past 30 days.</inlineHelpText>
        <label>Goal 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrandParent_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked for GrandParent User</description>
        <label>GrandParent User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCMProcessUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HCMProcessUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IOWNACCOUNT__c</fullName>
        <formula>IF( Manager.ManagerId = $User.Id ||  ManagerId = $User.Id ||  Manager.Manager.Id = $User.Id,&quot;yes&quot;,&quot;no&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IOWNACCOUNT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Extension__c</fullName>
        <label>ISO Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactivated_In_PeopleSoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is field to tell us that this user has been deactivated from PeopleSoft, Apparently this user has be deactivated from Salesforce.</description>
        <label>Inactivated In PeopleSoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCoachingUser__c</fullName>
        <description>This is used in SOQL in updateOwner trigger to make the SOQL a selective query. Otherwise the query is failing as the user object has more than 200k records which breaks the SF&apos;s limitations.</description>
        <externalId>true</externalId>
        <label>IsCoachingUser</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSeismicUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this field indicates that a user is a Seismic user and should be allocated a seismic license.</description>
        <label>Seismic User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ILC_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ILC Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Code_Level_Number__c</fullName>
        <formula>CASE( Job_Code_Level__c , &apos;Manager&apos;, 1, &apos;Director&apos;, 2, &apos;Senior Director&apos;, 3, &apos;VP&apos;, 4, &apos;SVP&apos;, 5, &apos;President&apos;, 6, &apos;CEO&apos;, 7, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Code Level Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Code_Level__c</fullName>
        <label>Job Code Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Senior Director</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lattice_Role__c</fullName>
        <label>Lattice Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing User</fullName>
                </value>
                <value>
                    <fullName>Play Designer</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Ops</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lattice_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lattice User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MB_Expiration_Date__c</fullName>
        <description>market Builder Exp date time for TOKEN</description>
        <label>MB Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ManagerEmp__c</fullName>
        <formula>Manager.OD_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ManagerEmp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_ID__c</fullName>
        <formula>IF(ISPICKVAL(Manager.Job_Code_Level__c, &quot;Manager&quot;), ManagerId,
IF(ISPICKVAL(Manager.Manager.Job_Code_Level__c, &quot;Manager&quot;), Manager.ManagerId,
IF(ISPICKVAL(Manager.Manager.Manager.Job_Code_Level__c, &quot;Manager&quot;), Manager.Manager.ManagerId,
IF(ISPICKVAL(Manager.Manager.Manager.Manager.Job_Code_Level__c, &quot;Manager&quot;), Manager.Manager.Manager.ManagerId,
&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Manager.FirstName  +&apos; &apos;+  Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Level_2__c</fullName>
        <formula>Manager.Manager.FirstName &amp;&quot; &quot;&amp; Manager.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managing Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manually_Reactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manually Reactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Builder_Role_Override__c</fullName>
        <description>Overwrites Market Builder role set by the default assignment formula.</description>
        <label>Market Builder Role Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Super User</fullName>
                </value>
                <value>
                    <fullName>Inside Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Inside Sales User</fullName>
                </value>
                <value>
                    <fullName>MANAGER</fullName>
                </value>
                <value>
                    <fullName>EMPLOYEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Builder_Role__c</fullName>
        <description>Used for Market Builder to determine the user access level.</description>
        <formula>IF(
	NOT(ISBLANK(TEXT(Market_Builder_Role_Override__c))),
	TEXT(Market_Builder_Role_Override__c),
	IF(
		AND(CONTAINS(Profile.Name,&quot;Inside Sales&quot;), isManager__c = true),
		&apos;Inside Sales Manager&apos;,
		IF(
			CONTAINS(Profile.Name,&quot;Inside Sales&quot;),
			&apos;Inside Sales User&apos;,
			IF(
				isManager__c = true,
				&apos;MANAGER&apos;,
				&apos;EMPLOYEE&apos;
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Builder Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Customer_Contact__c</fullName>
        <formula>IF(CONTAINS(LEFT($Profile.Name,12),&quot;Inside Sales&quot;) , 
   &apos;(855)337-6811&apos; + (if(!ISBLANK(ISO_Extension__c ), &apos; Ext:&apos; +ISO_Extension__c,&apos;&apos; ))
, (
if(!ISBLANK( Phone ) &amp;&amp;!ISBLANK(  MobilePhone ) &amp;&amp; MobilePhone != Phone  ,
 Phone +&apos; | &apos; + MobilePhone ,
 BLANKVALUE(Phone, MobilePhone )
)   
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Customer Contact #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameAndRole__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName &amp; &quot; - &quot; &amp; UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameAndRole</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numeric_Employee_ID__c</fullName>
        <formula>ISNUMBER( OD_Employee_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numeric Employee ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OD_Employee_ID__c</fullName>
        <externalId>true</externalId>
        <label>OD Employee ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OD_Title__c</fullName>
        <formula>IF(CONTAINS(Title, &quot;ACCOUNT MANAGER&quot;), &quot;Acct Mgr&quot;,
IF(CONTAINS(Title, &quot;BUSINESS DEVELOPMENT REP&quot;), &quot;BDR&quot;,
IF(CONTAINS(Title, &quot;DIRECTOR, BUS DEV&quot;), &quot;Dir-Bus. Dev&quot;,
IF(CONTAINS(Title, &quot;DIRECTOR, AREA SALES (CPD)&quot;),&quot;Dir-CPD&quot;,
IF(CONTAINS(Title, &quot;DIRECTOR, SR. PROD SVC - DPS&quot;),&quot;Dir-CPD&quot;,
IF(CONTAINS(Title, &quot;DIRECTOR, SALES (FURNITURE)&quot;),&quot;Dir-Sales&quot;,
IF(CONTAINS(Title, &quot;DIRECTOR II, SALES (GLOBAL)&quot;), &quot;Dir-Sales&quot;,
IF(CONTAINS(Title, &quot;DIRECTOR, INSIDE SALES&quot;),&quot;Dir-IS&quot;,
IF(CONTAINS(Title, &quot;DIRECTOR, SALES&quot;),&quot;Dir-Sales&quot;,
IF(CONTAINS(Title, &quot;DIRECTOR, SR TECH SLS (TCHDPT)&quot;),&quot;Dir-Sales&quot;,
IF(CONTAINS(Title, &quot;DISTRICT SALES MGR (GEN LINE)&quot;),&quot;DSM&quot;,
IF(CONTAINS(Title, &quot;MANAGER, DISTRICT SALES (GLBL)&quot;),&quot;DSM-Global&quot;,
IF(CONTAINS(Title, &quot;DISTRICT SALES MGR (TECH DPT)&quot;),&quot;DSM-Tech&quot;,
IF(CONTAINS(Title, &quot;DISTRICT SLS MGR II (TECHDPT)&quot;),&quot;DSM-Tech&quot;,
IF(CONTAINS(Title, &quot;DIRECTOR, SALES (REGIONAL)&quot;),&quot;RSD&quot;,
IF(CONTAINS(Title, &quot;DIRECTOR, REGIONAL SLS (CBS)&quot;),&quot;RSD-CBS&quot;,
IF(CONTAINS(Title, &quot;MANAGER, REGIONAL SALES (CBS)&quot;),&quot;RSM-CBS&quot;,
IF(CONTAINS(Title, &quot;MANAGER, REGIONAL SLS (CPD)&quot;),&quot;RSM-CPD&quot;,
IF(CONTAINS(Title, &quot;MANAGER, REGIONAL SLS (FURN)&quot;),&quot;RSM-Furn&quot;,
IF(CONTAINS(Title, &quot;MANAGER, NATIONAL ACCOUNT&quot;),&quot;NAM&quot;,
IF(CONTAINS(Title, &quot;MANAGER, NATIONAL ACCTS (CPD)&quot;),&quot;NAM-CPD&quot;,
IF(CONTAINS(Title, &quot;MANAGER, NATIONAL ACCTS (FED)&quot;),&quot;NAM-FED&quot;,
IF(CONTAINS(Title, &quot;MANAGER, NATIONAL ACCTS PRIVTE&quot;),&quot;NAM-Private&quot;,
IF(CONTAINS(Title, &quot;(ISO)&quot;),&quot;IS Rep&quot;,
IF(CONTAINS(Title, &quot;MANAGER, GLOBAL&quot;),&quot;GAM&quot;,
IF(CONTAINS(Title, &quot;MAJOR ACCOUNTS MANAGER&quot;),&quot;MAM&quot;,
IF(CONTAINS(Title, &quot;TERRITORY DEVELOPMENT REP&quot;),&quot;TDR&quot;,
IF(CONTAINS(Title, &quot;TELEPHONE ACCT MGR&quot;),&quot;TAM&quot;,
IF(CONTAINS(Title, &quot;VERTICAL MARKETS&quot;),&quot;VMM&quot;,
IF(CONTAINS(Title, &quot;MANAGER, TERRITORY DEVELOPMENT&quot;),&quot;TDM&quot;,
IF(CONTAINS(Title, &quot;MANAGER, INSIDE SALES&quot;),&quot;Mgr-IS&quot;,
IF(CONTAINS(Title, &quot;CONSULTANT, SALES (CPD)&quot;),&quot;SC-CPD&quot;,
IF(CONTAINS(Title, &quot;Consultant, Sales (DPS)&quot;),&quot;SC-CPD&quot;,
IF(CONTAINS(Title, &quot;SERVICE CONSULTANT (CPD)&quot;),&quot;SC-CPD&quot;,
IF(CONTAINS(Title, &quot;SERVICE CONSULTANT (GLOBAL)&quot;),&quot;SC-Global&quot;,
IF(CONTAINS(Title, &quot;SERVICE CONSULTANT (TECH)&quot;),&quot;SC-Tech&quot;,
IF(CONTAINS(Title, &quot;MANAGER, SR. INSIDE&quot;),&quot;Mgr-IS&quot;,&quot;Other&quot;)
))))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OD Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Rep_Number__c</fullName>
        <description>the legacy OfficeMax 4 digit rep number from mainframe (n_srep)</description>
        <externalId>true</externalId>
        <label>OMX Rep #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origanaly_Setup_in__c</fullName>
        <formula>if(CONTAINS(Email, &apos;officemax&apos;), &apos;ODP-North&apos;,&apos;ODP-South&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origanaly Setup in</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Manager__c</fullName>
        <label>Previous Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Title__c</fullName>
        <label>Previous Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Assignments__c</fullName>
        <label>#Primary Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Propose_Goal__c</fullName>
        <label>Propose Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pursue_Goal__c</fullName>
        <label>Pursue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reassgin_Opportunity__c</fullName>
        <label>Reassgin Opportunity</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionUserCount__c</fullName>
        <description>To count total active users by region (excluding Puerto Rico market) , only for Field Sales. It needs to be manually  updated weekly.</description>
        <formula>CASE(Region__c , &apos;Canada&apos;, 322,&apos;West&apos;, 313, &apos;Northeast&apos;, 262, &apos;Southeast&apos;, 196, &apos;Ent BD - Northeast&apos;, 66, &apos;Ent BD - Central&apos;, 61, &apos;Ent BD - West&apos;, 43, &apos;Healthcare and Buying Groups&apos;, 36,0)</formula>
        <label>RegionUserCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region_Market__c</fullName>
        <formula>Region__c + &quot; - &quot; +  Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region/Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reportees__c</fullName>
        <label>Reportees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retention_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies Retention Reps. Used for reporting</description>
        <label>Retention Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_ID__c</fullName>
        <externalId>true</externalId>
        <label>SAP ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SVP_ID__c</fullName>
        <formula>IF(ISPICKVAL(Manager.Job_Code_Level__c, &quot;SVP&quot;), ManagerId,
IF(ISPICKVAL(Manager.Manager.Job_Code_Level__c, &quot;SVP&quot;), Manager.ManagerId,
IF(ISPICKVAL(Manager.Manager.Manager.Job_Code_Level__c, &quot;SVP&quot;), Manager.Manager.ManagerId,
IF(ISPICKVAL(Manager.Manager.Manager.Manager.Job_Code_Level__c, &quot;SVP&quot;), Manager.Manager.Manager.ManagerId,
&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Advancing_Monthly_Goal__c</fullName>
        <label>Sales Advancing Monthly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Last_Login_Date__c</fullName>
        <description>This field help in filtering records, if &quot;Last Login Date&quot; and &quot;Second Last Login Date&quot; are same then this record can be ignored for processing by &quot;UserLoginData_Batch&quot; job.</description>
        <label>Second Last Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seismic_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this field indicates that a user is a Seismic user and should be allocated a seismic license.</description>
        <label>Seismic User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Senior_Director_ID__c</fullName>
        <formula>IF(ISPICKVAL(Manager.Job_Code_Level__c, &quot;Senior Director&quot;), ManagerId,
IF(ISPICKVAL(Manager.Manager.Job_Code_Level__c, &quot;Senior Director&quot;), Manager.ManagerId,
IF(ISPICKVAL(Manager.Manager.Manager.Job_Code_Level__c, &quot;Senior Director&quot;), Manager.Manager.ManagerId,
IF(ISPICKVAL(Manager.Manager.Manager.Manager.Job_Code_Level__c, &quot;Senior Director&quot;), Manager.Manager.Manager.ManagerId,
&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Senior Director ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Title__c</fullName>
        <label>Short Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmallPhotoURL__c</fullName>
        <label>SmallPhotoURL</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Portal_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SpringCM Portal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_EnabledEndDate__c</fullName>
        <inlineHelpText>This is the date that the user becomes disabled in SpringCM.  Leave blank for never.  Put in today&apos;s date for immediately.</inlineHelpText>
        <label>SpringCM Enabled End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_EnabledStartDate__c</fullName>
        <inlineHelpText>This is that date that the user becomes enabled in SpringCM. Leave blank if enabled immediately.</inlineHelpText>
        <label>SpringCM Enabled Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_Persona__c</fullName>
        <description>Personas, or role-based user settings, displays different buttons and menu items depending upon the user&apos;s job function</description>
        <inlineHelpText>Type in the name of the Persona the user is to be assinged to.</inlineHelpText>
        <label>SpringCM Persona</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_Role__c</fullName>
        <label>SpringCM Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Subscriber</fullName>
                    <default>true</default>
                    <label>Full Subscriber</label>
                </value>
                <value>
                    <fullName>Super Administrator</fullName>
                </value>
                <value>
                    <fullName>User Administrator</fullName>
                </value>
                <value>
                    <fullName>Limited Subscriber</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By clicking this the user will be added to SpringCM.  Also unclicking this will delete the user from SpringCM.</description>
        <label>SpringCM User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <description>BusinessPro Store#</description>
        <label>Store#</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TZ_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>TZ External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Zone_District__c</fullName>
        <label>Tech-Zone District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carolinas</fullName>
                </value>
                <value>
                    <fullName>Florida/Georgia</fullName>
                </value>
                <value>
                    <fullName>BDR</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TitleTrimmed__c</fullName>
        <formula>Right(Right(Title, len(Title) - len(LEFT(Title,Find(&quot;:&quot;, Title)))), len(Right(Title, len(Title) - len(LEFT(Right(Title, len(Title) - len(LEFT(Title,Find(&quot;:&quot;, Title)))),Find(&quot;:&quot;, Right(Title, len(Title) - len(LEFT(Title,Find(&quot;:&quot;, Title))))))))) - len(LEFT(Title,Find(&quot;:&quot;, Title))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Market_Builder__c</fullName>
        <description>The Token used for Market Builder App</description>
        <label>Token Market Builder</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Training_1_Metric__c</fullName>
        <label>1-30 Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Training_2_Metric__c</fullName>
        <label>31-60 Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Training_3_Metric__c</fullName>
        <label>61-90 Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Support_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition Support Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserCount__c</fullName>
        <description>Used in reporting to achieve the &quot;Power of One&quot; record count trick.  Search web for salesforce power of one to learn more.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_ID_18_digit__c</fullName>
        <description>18-digit user record ID</description>
        <formula>CASESAFEID(Id)</formula>
        <label>User ID (18-digit)</label>
        <type>Text</type>
    </fields>
</CustomObject>